--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta name="msapplication-TileColor" content="#cce7ff">
     <meta name="theme-color" content="#cce7ff">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img\svg\meteoriet.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="img\svg\meteoriet.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="img\svg\meteoriet.svg">
     <link rel="manifest" href="site.webmanifest">
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#0f3557">
 
