--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                 </g>
                             </svg>
                         </h1>
-                        <h1>&nbsp; Earth <mark class="yellow">Meteorites</mark> Landings</h1>
+                        <h1 class="logoText">Earth <mark class="yellow">Meteorites</mark> Landings</h1>
                      </div>
                 </div>
             </div>
@@ -184,13 +184,11 @@
                                     </tr>
                                 </table>
                             </div>
-                            <div class="wrap">
-                                <div class="accordion">
-                                    <div class="contentBx">
-                                        <div class="label">Lat and Long To Maps</div>
-                                        <div class="content">
-                                            <div id="map"></div>
-                                        </div>
+                            <div class="accordion">
+                                <div class="contentBx">
+                                    <div class="label">Lat and Long To Maps</div>
+                                    <div class="content">
+                                        <div id="map"></div>
                                     </div>
                                 </div>
                             </div>
